tests/negative/neg_try_send_use_after_move.safe
-- Test: neg_try_send_use_after_move
-- Description: try_send freezes an owning source until Success is checked.
-- Expected: REJECT use_after_move

package Neg_Try_Send_Use_After_Move is

   type Payload is record
      Value : Integer;
   end record;

   type Payload_Ptr is access Payload;

   channel Data_Ch : Payload_Ptr capacity 1;

   procedure Run is
      Source  : Payload_Ptr = new ((Value = 1) as Payload);
      Success : Boolean = False;
   begin
      try_send Data_Ch, Source, Success;
      Source.all.Value = 2;
   end Run;

end Neg_Try_Send_Use_After_Move;
